test/log/reduction/vrmin_v_i16_m.txt
vrmin_v_i16_m.c:9:2: warning: multi-line comment [-Wcomment]
    9 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vrmin_v_i16_m.c:11:44: warning: backslash and newline separated by space
   11 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vrmin_v_i16_m.c:13:40: warning: backslash and newline separated by space
   13 |  #define data_init(a, b, n, threshold) \
      |                                         
vrmin_v_i16_m.c:14:35: warning: backslash and newline separated by space
   14 |      for(int i = 0; i < n; i++) { \
      |                                    
vrmin_v_i16_m.c:15:40: warning: backslash and newline separated by space
   15 |              a[i] = random(threshold); \
      |                                         
vrmin_v_i16_m.c:16:27: warning: backslash and newline separated by space
   16 |              b[i] = a[i]; \
      |                            
vrmin_v_i16_m.c:22:6: warning: no previous prototype for 'vrmin_v_i16_m_golden' [-Wmissing-prototypes]
   22 | void vrmin_v_i16_m_golden(bool32_t mask,int16_t *maskoff,int16_t *a,int16_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~~
vrmin_v_i16_m.c: In function 'vrmin_v_i16_m_golden':
vrmin_v_i16_m.c:24:1: error: 'Operator' undeclared (first use in this function); did you mean 'perror'?
   24 | Operator Line --- TODO
      | ^~~~~~~~
      | perror
vrmin_v_i16_m.c:24:1: note: each undeclared identifier is reported only once for each function it appears in
vrmin_v_i16_m.c:24:9: error: expected ';' before 'Line'
   24 | Operator Line --- TODO
      |         ^~~~~
      |         ;
vrmin_v_i16_m.c:22:36: warning: unused parameter 'mask' [-Wunused-parameter]
   22 | void vrmin_v_i16_m_golden(bool32_t mask,int16_t *maskoff,int16_t *a,int16_t *exp_result) {
      |                           ~~~~~~~~~^~~~
vrmin_v_i16_m.c:22:50: warning: unused parameter 'maskoff' [-Wunused-parameter]
   22 | void vrmin_v_i16_m_golden(bool32_t mask,int16_t *maskoff,int16_t *a,int16_t *exp_result) {
      |                                         ~~~~~~~~~^~~~~~~
vrmin_v_i16_m.c:22:67: warning: unused parameter 'a' [-Wunused-parameter]
   22 | void vrmin_v_i16_m_golden(bool32_t mask,int16_t *maskoff,int16_t *a,int16_t *exp_result) {
      |                                                          ~~~~~~~~~^
vrmin_v_i16_m.c:22:78: warning: unused parameter 'exp_result' [-Wunused-parameter]
   22 | void vrmin_v_i16_m_golden(bool32_t mask,int16_t *maskoff,int16_t *a,int16_t *exp_result) {
      |                                                                     ~~~~~~~~~^~~~~~~~~~
vrmin_v_i16_m.c: In function 'main':
vrmin_v_i16_m.c:40:5: warning: implicit declaration of function 'data_init_bool'; did you mean 'data_init_scalar'? [-Wimplicit-function-declaration]
   40 |     data_init_bool(mask, exp_mask, 32, 0xffff);
      |     ^~~~~~~~~~~~~~
      |     data_init_scalar
vrmin_v_i16_m.c:45:26: error: incompatible type for argument 1 of 'vrmin_v_i16_m_golden'
   45 |     vrmin_v_i16_m_golden(exp_mask,exp_maskoff,exp_a,exp_result);
      |                          ^~~~~~~~
      |                          |
      |                          uint64_t * {aka long long unsigned int *}
vrmin_v_i16_m.c:22:36: note: expected 'bool32_t' but argument is of type 'uint64_t *' {aka 'long long unsigned int *'}
   22 | void vrmin_v_i16_m_golden(bool32_t mask,int16_t *maskoff,int16_t *a,int16_t *exp_result) {
      |                           ~~~~~~~~~^~~~
vrmin_v_i16_m.c:48:28: error: incompatible type for argument 1 of 'vrmin_v_i16_m'
   48 |     result = vrmin_v_i16_m(mask,maskoff,a);
      |                            ^~~~
      |                            |
      |                            bool32_t
In file included from vrmin_v_i16_m.c:4:
/opt/analog/riscv/1.0.0/Riscv/software/host/bin/gcc/lib/gcc/riscv32-rivai-elf/10.2.1/include/rivai_rugrats.h:1930:1: note: expected 'bool32x2_t' but argument is of type 'bool32_t'
 1930 | __RUGRATS_REDUC_V_OP (rmin, i, int, 16, 32)
      | ^~~~~~~~~~~~~~~~~~~~
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vrmin_v_i16_m.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vrmin_v_i16_m"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vrmin_v_i16_m.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vrmin_v_i16_m.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed